force-app/main/default/objects/JobApplication__c/JobApplication__c.object-meta.xml
<CustomObject>
    <label>Job Application</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Job Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>