force-app/main/default/objects/JobApplication__c/fields/Additional_Question__c.field-meta.xml
<CustomField>
    <fullName>Additional_Question__c</fullName>
    <description>Why should we hire you?</description>
    <inlineHelpText>Why should we hire you?</inlineHelpText>
    <label>Additional Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>