force-app/main/default/objects/JobApplication__c/fields/HR_phone_number__c.field-meta.xml
<CustomField>
    <fullName>HR_phone_number__c</fullName>
    <formula>JobPosition__r.HR_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR phone number</label>
    <type>Text</type>
</CustomField>