force-app/main/default/objects/JobApplication__c/fields/JobPosition__c.field-meta.xml
<CustomField>
    <fullName>JobPosition__c</fullName>
    <label>Job Position</label>
    <referenceTo>JobPosition__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>