force-app/main/default/objects/JobApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobPosition__c</columns>
    <columns>Candidate__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HR_phone_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>